crates/aranya-policy-compiler/tests/data/structs/field_insertion_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
1 | struct Foo { +Bar }
  |               ^^^ struct Bar is not defined
